<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">options</string>
    <string name="title">Connection :</string>
    <string name="connection">Connection</string>
    <string name="t_user">Utilisateur :</string>
    <string name="login_E">Nom utilisateur</string>
    <string name="annuler">annuler</string>
    <string name="id_">ID :</string>
    <string name="verif">Vérification :</string>
    <string name="deco">Déconnection</string>
    <string name="valid">Valider</string>
    <string name="password_E">Mot de passe</string>
    <string name="t_professeur">Professeur : </string>
    <string name="login_P">Nom utilisateur</string>
    <string name="password_P">Mot de passe</string>
    <string name="B_inscr">Inscription</string>
    <string name="b_env_q">Envoie et résultat de question</string>
    <string name="b_ajout_q">Ajouter une question</string>
    <string name="b_supp_q">Supprimer une question</string>
    <string name="t_quest">Veuillez saisir une question :</string>
    <string name="r_id">Rentrer l identifiant de la question :</string>
    <string name="question">Question :</string>
    <string name="t_rep">Réponses :</string>
    <string name="ins_pass">Mot de passe :</string>
    <string name="title_activity_rentrer_id">Rentrer identifiant</string>
    <string name="title_activity_repondre_question">Repondre question</string>
    <string name="title_activity_envoie_question">Envoyer une question</string>
    <string name="title_activity_stat">Statistiques</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_menu_prof">Menu professeur</string>
    <string name="title_activity_ajouter_question">Ajouter une question</string>

</resources>
