<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/fond"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/b_supp_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_ajout_q"
        android:layout_alignRight="@+id/b_ajout_q"
        android:layout_centerVertical="true"
        android:text="@string/b_supp_q" />

    <Button
        android:id="@+id/b_ajout_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_supp_q"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:minWidth="280dp"
        android:text="@string/b_ajout_q" />

    <TextView
        android:id="@+id/t_professeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/t_professeur"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/b_envoie_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_supp_q"
        android:layout_alignRight="@+id/b_supp_q"
        android:layout_below="@+id/b_supp_q"
        android:layout_marginTop="20dp"
        android:text="@string/b_env_q" />

</RelativeLayout>
